--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ body {
     background-color: grey;
     margin: 1%;
     overflow-x: hidden;
+    background-image: url('../media/img/FondoPag.png');
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
 
 #header {
@@ -12,11 +15,14 @@ body {
 #ruletaDiv {
     min-height: 100px;
     margin-bottom: 10px;
+    overflow: auto;
+    overflow-x: hidden;
 }
 
 #ruletaImg  {
     margin-left: 0px;
-    min-height: 115px;
+    min-height: 140px;
+    height: 220px;
     margin-top: 10px;
     border: 1px solid red;
 }
@@ -35,7 +41,7 @@ body {
 }
 
 #resultado {
-    min-height: 700px;
+    min-height: 320px;
 }
 
 .imagenes {
@@ -44,4 +50,11 @@ body {
     max-width: 170px;
     max-height: 115px;
     border: 1px solid black;
+}
+
+#flechaImg { 
+    width: 60px;
+    text-align: center;
+    height: 60px;
+    margin-top: -40px;
 }
