--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
     overflow-x: hidden;
     background-image: url('../media/img/FondoPag.png');
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
 }
 
 #header {
