--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ body {
 }
 
 #header {
-    border: 1px solid red;
+    border: 1px solid ;
+    border-color: orange;
     background-color: #c0834f;
     box-shadow: 2px 2px 2px 2px rgb(0, 0, 0);
     margin-bottom: 10px;
@@ -22,6 +23,31 @@ body {
     -webkit-text-stroke: 0.8px black;
     opacity: 85%;
     color: #eed09d;
+    min-height: 100px;
+}
+
+#temas {
+    text-align: right;
+}
+
+#temas button {
+    margin-top: 1%;
+    margin-right: 1%;
+    border-radius: 10px;
+    width: 20px;
+    height: 20px;
+}
+
+#fondoVerde {
+    background-color: green;
+}
+
+#fondoRojo {
+    background-color: red;
+}
+
+#fondoNaranja {
+    background-color: orange;
 }
 
 #ruletaDiv {
@@ -29,7 +55,8 @@ body {
     margin-bottom: 10px;
     overflow: auto;
     overflow-x: hidden;
-    border: 1px solid orange;
+    border: 1px solid;
+    border-color: orange;
     background-color: #e8c68c;
     box-shadow: 2px 2px 2px 2px rgb(0, 0, 0);
 }
